--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 project(ORB_SLAM2)
 
+set(CMAKE_C_COMPILER /home/blakewford/build/bin/clang)
+set(CMAKE_CXX_COMPILER /home/blakewford/build/bin/clang++)
+
 IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Release)
 ENDIF()
